--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,7 @@
 {% if site.disqus %}
 
 <div id="disqus_thread"></div>
+
 <script>
 
 
@@ -17,5 +18,6 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//github-17.disqus.com/count.js" async></script>
 
 {% endif %}
