--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,6 @@
 
 {% if site.footer-text %}
 <p>{{ site.footer-text }}</p>
+<script id="dsq-count-scr" src="//github-17.disqus.com/count.js" async></script>
+
 {% endif %}
